@@ -2,8 +2,6 @@ package list;
 
 import org.junit.Test;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.core.Is.is;
@@ -15,7 +13,7 @@ public class ConvertListTest {
     public void when7ElementsThen9() {
         ConvertList list = new ConvertList();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7),
+                List.of(1, 2, 3, 4, 5, 6, 7),
                 3
         );
         int[][] expect = {
@@ -30,7 +28,7 @@ public class ConvertListTest {
     public void when6Elements3RowsThen6() {
         ConvertList list = new ConvertList();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6),
+                List.of(1, 2, 3, 4, 5, 6),
                 3
         );
         int[][] expect = {
@@ -45,7 +43,7 @@ public class ConvertListTest {
     public void when6Elements2RowsThen6() {
         ConvertList list = new ConvertList();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6),
+                List.of(1, 2, 3, 4, 5, 6),
                 2
         );
         int[][] expect = {
@@ -57,11 +55,12 @@ public class ConvertListTest {
 
     @Test
     public void convertTest() {
-        List<int[]> list = new ArrayList<>();
-        list.add(new int[]{1, 2});
-        list.add(new int[]{3, 4, 5, 6});
+        List<int[]> list = List.of(
+                new int[]{1, 2},
+                new int[]{3, 4, 5, 6}
+                );
         List<Integer> result = ConvertList.convert(list);
-        List<Integer> expected = new ArrayList<Integer>(Arrays.asList(1, 2, 3, 4, 5, 6));
+        List<Integer> expected = List.of(1, 2, 3, 4, 5, 6);
         assertThat(result, is(expected));
     }
 }
